data/derived/comb/progs/unify/prog2964.ml.out
Characters 37-61:
  let stringOfList f l = sepConcat ";" (List.map(fun c -> f l));;
                                       ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list -> 'b list
       but an expression was expected of type string list
